objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABC_Category__c</fullName>
        <label>ABC Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACES__c</fullName>
        <label>ACES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Public Sector-Tier 1</fullName>
                </value>
                <value>
                    <fullName>Public Sector-Tier 2</fullName>
                </value>
                <value>
                    <fullName>Public Sector-Tier 3</fullName>
                </value>
                <value>
                    <fullName>Public Sector-Tier 4</fullName>
                </value>
                <value>
                    <fullName>Public Sector-Tier 4B</fullName>
                </value>
                <value>
                    <fullName>Public Sector-Transformational</fullName>
                </value>
                <value>
                    <fullName>Territory Geo Account</fullName>
                </value>
                <value>
                    <fullName>Territory Geo Whitespace Account</fullName>
                </value>
                <value>
                    <fullName>Territory Mid Market Whitespace Account</fullName>
                </value>
                <value>
                    <fullName>Territory Mid Mkt Account</fullName>
                </value>
                <value>
                    <fullName>Territory Strategic Account</fullName>
                </value>
                <value>
                    <fullName>Tier 1-Strategic</fullName>
                </value>
                <value>
                    <fullName>Tier 2-Investment</fullName>
                </value>
                <value>
                    <fullName>Tier 3-Focus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AP_Opportunities__c</fullName>
        <label>TO BE DELETED Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AUID__c</fullName>
        <description>Account Ultimate ID</description>
        <label>Parent Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUName__c</fullName>
        <description>Account Ultimate Name</description>
        <label>Parent Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accelerate_Stage__c</fullName>
        <description>Partners who are willing or already invest in their Cisco Practice, have or will have impact in the region based on their investment.</description>
        <label>TO BE DELETED Accelerate Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountNameCSC__c</fullName>
        <label>Account Name (E-Sales Forecast)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNameEnglish__c</fullName>
        <label>Account Name (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountYearEnd__c</fullName>
        <label>Account Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <label>Account Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mid Market Select</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>S Focus</fullName>
                </value>
                <value>
                    <fullName>Strategic Account</fullName>
                </value>
                <value>
                    <fullName>TAM Focus</fullName>
                </value>
                <value>
                    <fullName>Territory Named</fullName>
                </value>
                <value>
                    <fullName>Vertical AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Flags__c</fullName>
        <description>Generic picklist used to flag accounts.</description>
        <label>Account Flags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account  Planning Completed</fullName>
                </value>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>AppD</fullName>
                </value>
                <value>
                    <fullName>Apple Wireless Upgrade-Retail</fullName>
                </value>
                <value>
                    <fullName>Avant Garde</fullName>
                </value>
                <value>
                    <fullName>Avant Garde Amber</fullName>
                </value>
                <value>
                    <fullName>Avant Garde Green</fullName>
                </value>
                <value>
                    <fullName>Avant Garde Red</fullName>
                </value>
                <value>
                    <fullName>Be Awesome Campaign</fullName>
                </value>
                <value>
                    <fullName>Biz Video Account Mapping Done</fullName>
                </value>
                <value>
                    <fullName>Biz Video Cust Engagement/Partner Done</fullName>
                </value>
                <value>
                    <fullName>Biz Video Strategy Session Done</fullName>
                </value>
                <value>
                    <fullName>Business Critical Services</fullName>
                </value>
                <value>
                    <fullName>BVA - ACI</fullName>
                </value>
                <value>
                    <fullName>BVA - Other</fullName>
                </value>
                <value>
                    <fullName>BVA - SDA</fullName>
                </value>
                <value>
                    <fullName>BVA - SDWAN</fullName>
                </value>
                <value>
                    <fullName>BVA - Tetration</fullName>
                </value>
                <value>
                    <fullName>Contains Account Plan</fullName>
                </value>
                <value>
                    <fullName>CSO Marketing</fullName>
                </value>
                <value>
                    <fullName>CTO Marketing</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>DNA Center Adoption</fullName>
                </value>
                <value>
                    <fullName>EMEAR Central Partner Led</fullName>
                </value>
                <value>
                    <fullName>EMEAR Commercial Large Opportunity</fullName>
                </value>
                <value>
                    <fullName>ENG-Critical Account</fullName>
                </value>
                <value>
                    <fullName>Enterprise 3.0 Account</fullName>
                </value>
                <value>
                    <fullName>ESO Marketing</fullName>
                </value>
                <value>
                    <fullName>ETO Marketing</fullName>
                </value>
                <value>
                    <fullName>Fast Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_ID_18__c</fullName>
        <description>18 digit account id</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Account ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>TO BE DELETED Account ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Ids__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Legal__c</fullName>
        <label>Account Name (Legal)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Local__c</fullName>
        <description>Field used to insert the partner name in local language</description>
        <label>Account Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Update_Time__c</fullName>
        <label>Account Owner Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <description>As Per QW-3726, to store Account Plan Status for US/Commercial Profile</description>
        <label>TO BE DELETED Account Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Plan_Type__c</fullName>
        <description>As Per QW-3726, to store Account Plan Type for US/Commercial Profile</description>
        <label>TO BE DELETED Account Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I5</fullName>
                </value>
                <value>
                    <fullName>I5 Express</fullName>
                </value>
                <value>
                    <fullName>I5 One Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Potential_Dollar__c</fullName>
        <description>This field will be populated by trigger Calculate_AccountPotentialDollar, Account Potential Dollar = Exact Number of Employees * Vertical By Head for the Country and Industry combination, Currently used only for European Countries.</description>
        <label>Account Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>This field is used for the reporting to see whether the account is active partner account based on active partner users on it.</description>
        <label>Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity_Value__c</fullName>
        <label>Active Opportunity Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AddressEnglishFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AddressEnglishFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AddressFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddressLine1_English__c</fullName>
        <description>used for non-english profiles</description>
        <label>Address Line 1 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2_English__c</fullName>
        <description>used for non-english profiles</description>
        <label>Address Line 2 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aligns_to_a_market_adjacency__c</fullName>
        <description>What Cisco market adjacencies is the Partner aligned with.</description>
        <inlineHelpText>Aligns To A Market Adjacency</inlineHelpText>
        <label>TO BE DELETED Adjacency Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Opportunity_Value__c</fullName>
        <label>All Opportunity Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Allocated_Partner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Allocated to the End Customer Account</description>
        <label>Allocated Partner 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Allocated Partner 1</relationshipLabel>
        <relationshipName>AllocatedPartner1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Allocated to the End Customer Account</description>
        <label>Allocated Partner 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Allocated Partner 2</relationshipLabel>
        <relationshipName>AllocatedPartner2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_Partner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Allocated to the End Customer Account</description>
        <label>Allocated Partner 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Allocated Partner 3</relationshipLabel>
        <relationshipName>AllocatedPartner3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue_ARR__c</fullName>
        <description>As part of C360 project creating this field</description>
        <label>Annual Recurring Revenue (ARR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_000__c</fullName>
        <description>Factiva Integration field.  Displays the company’s annual revenue in the local currency of the company.</description>
        <label>Annual Revenue (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Local_Currency__c</fullName>
        <label>Annual Revenue (Local Currency)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>As Per QW-3089: Used to store user DataCentre information</description>
        <label>TO BE DELETED Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP/Oracle 11i</fullName>
                </value>
                <value>
                    <fullName>Oracle-Siebel</fullName>
                </value>
                <value>
                    <fullName>Oracle Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>BEA-Weblogic/Oracle JDE</fullName>
                </value>
                <value>
                    <fullName>Portal/IBM-Websphere Portal</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>Vignette</fullName>
                </value>
                <value>
                    <fullName>Interwoven</fullName>
                </value>
                <value>
                    <fullName>MSFT-Sharepoint</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Business Objects</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_CSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Success Engineer added to particular customer (Account) record</description>
        <label>Assigned CSE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts0Bqy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_SPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM user will be assign to this field</description>
        <label>Assigned SPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5UWt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>IF(ISBLANK(Assigned_CSE__c  ), HYPERLINK("/" &amp; Assigned_SPM__c, Assigned_SPM__r.FirstName &amp; " " &amp; Assigned_SPM__r.LastName, '_self'), HYPERLINK("/" &amp;  Assigned_CSE__c, Assigned_CSE__r.FirstName  &amp; " " &amp; Assigned_CSE__r.LastName, '_self'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attrition__c</fullName>
        <label>Attrition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_to_Renew__c</fullName>
        <label>Available to Renew (ATR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avant_Garde__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>QW-4998, Changed label to Assigned Partner
QW-2938, Lookup field to associate a Avant Garde Partner to Account</description>
        <label>Assigned Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BEC_ID__c</fullName>
        <description>PGTMV BEC ID</description>
        <label>BEC ID (PGTMV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_GEO_ID__c</fullName>
        <description>PGTMV BE GEO ID</description>
        <label>BE GEO ID (PGTMV)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_GEO_Name_Country_Group__c</fullName>
        <description>Identifies the Country Group the partner is part of as per Channels definition</description>
        <label>Country Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BE_GEO_SP_w_Blended_M_Goal__c</fullName>
        <description>Counts number of SPMS Partner Specializations records for Partner Company (BE GEO Level).</description>
        <label>BE GEO SP w Blended M Goal</label>
        <summaryFilterItems>
            <field>Partner_Specialization__c.QUAL_CD__c</field>
            <operation>equals</operation>
            <value>SPMS</value>
        </summaryFilterItems>
        <summaryForeignKey>Partner_Specialization__c.Partner_Company__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Best_Case_Attrition_Amount__c</fullName>
        <label>Best Case Attrition Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Total_000__c</fullName>
        <formula>Expected_Bookings_Wireless_000__c +
                Expected_Bookings_Telepresence_000__c +
                Expected_Bookings_Switching_000__c +
                Expected_Bookings_Services_000__c +
                Expected_Bookings_Security_000__c +
                Expected_Bookings_Routing_000__c +
                Expected_Bookings_Data_Center_UCS_000__c +
                Expected_Bookings_Collab_Voice_000__c +
                Expected_Bookings_Collab_App_000__c +
                Expected_Booking_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings-Total ($'000)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_compliments_a_market_adjacency__c</fullName>
        <description>Which Cisco market adjacencies is the Partner involved with.</description>
        <inlineHelpText>The Business Compliments A Market Adjacency</inlineHelpText>
        <label>TO BE DELETED Market Adjacency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C360Account_Ref__c</fullName>
        <externalId>true</externalId>
        <label>C360Account Ref</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CAP_Details_Link__c</fullName>
        <formula>HYPERLINK("https://clpsvs.cloudapps.cisco.com/services/clip/main/app/service/cap/engagement","https://clpsvs.cloudapps.cisco.com/services/clip/main/app/service/cap/engagement")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAP Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Details__c</fullName>
        <description>C360 field</description>
        <label>CAP Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CAP_Type__c</fullName>
        <label>CAP Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CES_Account_Access__c</fullName>
        <description>This field is used to determine the access on the Account for CES users</description>
        <label>CES Account Access</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CISCOProductSpecialisation__c</fullName>
        <label>Cisco Product Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Storage</fullName>
                </value>
                <value>
                    <fullName>VPN Security</fullName>
                </value>
                <value>
                    <fullName>Wireless LAN</fullName>
                </value>
                <value>
                    <fullName>WAN Solution</fullName>
                </value>
                <value>
                    <fullName>Content Networking</fullName>
                </value>
                <value>
                    <fullName>Voice Access</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>IP Telephony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Data_Source__c</fullName>
        <description>Source of CI data.</description>
        <label>CI Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Last_Updated_Date__c</fullName>
        <description>CI field to show the CI data last updated or uploaded</description>
        <label>CI Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRAddressLine1__c</fullName>
        <label>CR Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRAddressLine2__c</fullName>
        <label>CR Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRAddressLine3__c</fullName>
        <description>CR Address Line 3</description>
        <label>CR Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRAdressFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRAddressFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRCity__c</fullName>
        <label>CR City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRCountry__c</fullName>
        <label>CR Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRName__c</fullName>
        <label>CR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRState__c</fullName>
        <label>CR State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRZipPostalCode__c</fullName>
        <label>CR ZipPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSA__c</fullName>
        <label>TO BE DELETED CSA</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSCID__c</fullName>
        <label>CSC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCSiteID__c</fullName>
        <description>Previously CSC Site ID</description>
        <externalId>true</externalId>
        <label>Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSE__c</fullName>
        <label>TO BE DELETED CSE</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Control_Profile__c</fullName>
        <description>Type of  Call Control setup customer is currently using.</description>
        <label>TO BE DELETED Call Control Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Standard</fullName>
                </value>
                <value>
                    <fullName>Cisco Beachhead</fullName>
                </value>
                <value>
                    <fullName>In Play</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Create Demand</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Status_Code__c</fullName>
        <label>Certification Status Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Master_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used with the European and Emerging theater to denote the top level channel account</description>
        <label>TO BE DELETED Channel Master Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Channel Master Account ID)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_PAM__c</fullName>
        <description>Free text field maintained by Theater Ops to indicate the internal user/team responsible for the partner</description>
        <label>Cisco PAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Tier_Ranking__c</fullName>
        <label>Cisco Tier Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_English__c</fullName>
        <description>used for non-english profiles</description>
        <label>City (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Utility_computing_strategy__c</fullName>
        <description>Utility computing strategy of customer</description>
        <label>Cloud/Utility Computing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_Sort_Order__c</fullName>
        <description>Sort order for Account Color (Green, Yellow, Red, Blank)</description>
        <formula>IF((ISPICKVAL( Unallocated_Account__c ,'Yes') &amp;&amp; (ISBLANK( Allocated_Partner_1__c ) &amp;&amp; ISBLANK( Allocated_Partner_2__c ) &amp;&amp; ISBLANK( Allocated_Partner_3__c ) &amp;&amp; ISBLANK( Allocated_Partner_4__c ) )), 
30, 

IF((NOT(ISPICKVAL( Unallocated_Account__c ,'Yes')) &amp;&amp; NOT(ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; ((NOT (ISBLANK(Allocated_Partner_1__c )) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_2__c )) &amp;&amp; ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_3__c )) &amp;&amp; ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_4__c )) || (NOT (ISBLANK(Allocated_Partner_4__c )) &amp;&amp; ISBLANK(Allocated_Partner_1__c ) &amp;&amp; ISBLANK(Allocated_Partner_2__c ) &amp;&amp; ISBLANK(Allocated_Partner_3__c )))), 

10, 

IF(NOT(ISPICKVAL( Unallocated_Account__c ,'Yes') || ISPICKVAL( Release_to_Unallocated_Pool__c,'Yes')) &amp;&amp; (NOT (ISBLANK(Allocated_Partner_1__c )) || NOT (ISBLANK(Allocated_Partner_2__c )) || NOT (ISBLANK(Allocated_Partner_3__c )) || NOT (ISBLANK(Allocated_Partner_4__c ))), 
20,999) 
))</formula>
        <label>Color Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>